--- a/app/view/base-system.html
+++ b/app/view/base-system.html
@@ -26,7 +26,7 @@
 		<script language="JavaScript" src="{{baseurl}}system/js/mozajik-gui-1.3.js" type="text/javascript"></script>
 		{% endblock javascripts %}
 				
-		{{zaj.js}} 
+		{{ofw.js|safe}}
 
 		{% block head %}{% endblock %}
 
