--- a/app/view/ieupgrade/upgrade.html
+++ b/app/view/ieupgrade/upgrade.html
@@ -1,11 +1,12 @@
 <!--[if lte IE 8]>
-	<aside id="ie_upgrade" class="navbar-fixed-bottom bg-danger" style="z-index:99999">
+	{% lang 'ieupgrade' %}
+	<aside id="ie_upgrade" class="navbar-fixed-top bg-danger" style="z-index:99999">
 		<div class="container">
 			<div class="row">
 				<p class="col-xs-12" style="margin: 10px auto; font: bold 16px/34px 'Helvetica Neue',sans-serif;">
-					You are using an outdated browser. Please upgrade to get the full experience.
+					{{#message#}}
 					<a onclick="$('#ie_upgrade').remove()" type="button pull-right" class="close"><span aria-hidden="true">&times;</span></a>
-					<a href="http://outdatedbrowser.com/{{ofw.lang}}" target="_blank" type="button" class="btn btn-success pull-right" style="margin-right: 15px">Upgrade</a>
+					<a href="http://outdatedbrowser.com/{{ofw.lang}}" target="_blank" type="button" class="btn btn-success pull-right" style="margin-right: 15px">{{#button#}}</a>
 				</p>
 			</div>
 		</div>
