--- a/plugins/_jquery/view/field/photo.field.html
+++ b/plugins/_jquery/view/field/photo.field.html
@@ -1,6 +1,19 @@
 {% lang 'system/fields' 'photos' %}
 <!-- requires jquery! ONLY FOR A SINGLE PHOTO!!!! -->
+<!-- jquery ui -->
+<script language="JavaScript" src="{{baseurl}}system/js/jquery/jquery-ui-1.9.2/js/jquery-ui-1.9.2.custom.min.js" type="text/javascript"></script>
+<!--[if lt IE 8]><script src="{{baseurl}}system/js/json2.js"></script><![endif]-->
 <script language="JavaScript" src="{{baseurl}}system/js/plupload/plupload.full.js" type="text/javascript"></script>
+
+<script>
+    zaj.addMyPhotoPopover = function(el, url){
+        el.popover({toggle: 'popover', html: true, container: 'body', placement: 'top', content: "<a class='btn btn-primary' href='"+url+"' target='_blank'><span class='glyphicon glyphicon-zoom-in'></span></a> <a class='btn btn-danger' data-photo='"+el[0].id+"' onclick='upload_remove_{{field.uid}}(event);'><span data-photo='"+el[0].id+"' class='glyphicon glyphicon-trash'></span></a> <a style='margin-left: 10px;' data-photo='"+el[0].id+"' onclick='zaj.closeMyPhotoPopover(event)'><span data-photo='"+el[0].id+"' class='glyphicon glyphicon-remove'></span></a>" });
+    };
+    zaj.closeMyPhotoPopover = function(ev){
+        $('#'+$(ev.target).attr('data-photo')).popover('hide');
+    };
+</script>
+
 
 <a id="{{field.uid}}-pickfiles" class="btn ofw-field-photo pickfiles" style="cursor: pointer;"><i class="icon-folder-open"></i> Kép kiválasztása</a>
 
@@ -16,16 +29,20 @@
 <div id="{{field.id}}-errors"></div>
 <div class="foto ofw-field-photo filelist" id="{{field.uid}}-filelist">
 	{% if field.value %}
-		<img src="{{field.value.normal}}"/>
+    <div class="col-sm-2" id="{{field.value.id}}" style="position: relative; cursor: pointer;">
+		<img class="pull-left img-thumbnail img-responsive" src="{{field.value.normal}}" />
+    </div>
+    <script>zaj.ready(function(){ zaj.addMyPhotoPopover($('#{{field.value.id}}'), '{{field.value.large}}'); })</script>
 	{% endif %}
+    <div class="clearfix"></div>
 </div>
-<input type="hidden" name="{{field.name}}" id="{{field.uid}}">
+<input type="hidden" name="{{field.name}}" id="{{field.uid}}" {% if field.value %} value="{{field.value.id}}" {% endif %}>
 
 <br/>
 
 
 <script type="text/javascript">
-	var file_upload_changes_{{field.uid}} = {'add': {}, 'remove': {}, 'order': {} };
+    var file_upload_changes_{{field.uid}} = {add: [], remove: [], order: [] };
 	
 	// create uploader and list
 		var uploader_{{field.uid}};
@@ -94,10 +111,28 @@
 					{% endif %}
 				// Add my image
 					var imgurl = '{{baseurl}}system/plupload/preview/?id='+res.id;
-					$('#{{field.uid}}-filelist').html("<img src='"+imgurl+"'>");
+                    var el = $("<div class='col-sm-2' id='"+res.id+"' style='position: relative; cursor: pointer;'><img class='pull-left img-thumbnail img-responsive' src='"+imgurl+"'></div><div class='clearfix'></div>");
+					$('#{{field.uid}}-filelist').html(el);
+                    zaj.addMyPhotoPopover(el, imgurl);
 				// Set as my input value
 					$('#{{field.uid}}').val(res.id);
 			};
+
+            /**
+             * Update after remove
+             * @param {object} ev The event which is passed when clicking on the delete element.
+             **/
+            upload_remove_{{field.uid}} = function(ev){
+                var id = $(ev.target).attr('data-photo');
+                var $photodiv = $('#'+id);
+                // Turn off my popover
+                $photodiv.popover('hide');
+                // Remove my div
+                $photodiv.remove();
+
+                // Set input
+                $('#{{field.uid}}').val('');
+            };
 			
 		// Run init
 			uploader_{{field.uid}}.init();
