--- a/plugins/_jquery/view/field/photo.field.html
+++ b/plugins/_jquery/view/field/photo.field.html
@@ -6,7 +6,8 @@
 <script language="JavaScript" src="{{baseurl}}system/js/plupload/plupload.full.js" type="text/javascript"></script>
 
 <script>
-    zaj.addMyPhotoPopover = function(el, url){
+    zaj.addMyPhotoPopover_{{field.uid}} = function(el, url){
+        console.log(el);
         el.popover({toggle: 'popover', html: true, container: 'body', placement: 'top', content: "<a class='btn btn-primary' href='"+url+"' target='_blank'><span class='glyphicon glyphicon-zoom-in'></span></a> <a class='btn btn-danger' data-photo='"+el[0].id+"' onclick='upload_remove_{{field.uid}}(event);'><span data-photo='"+el[0].id+"' class='glyphicon glyphicon-trash'></span></a> <a style='margin-left: 10px;' data-photo='"+el[0].id+"' onclick='zaj.closeMyPhotoPopover(event)'><span data-photo='"+el[0].id+"' class='glyphicon glyphicon-remove'></span></a>" });
     };
     zaj.closeMyPhotoPopover = function(ev){
@@ -32,12 +33,12 @@
     <div class="col-sm-2" id="{{field.value.id}}" style="position: relative; cursor: pointer;">
 		<img class="pull-left img-thumbnail img-responsive" src="{{field.value.normal}}" />
     </div>
-    <script>zaj.ready(function(){ zaj.addMyPhotoPopover($('#{{field.value.id}}'), '{{field.value.large}}'); })</script>
+    <script>zaj.ready(function(){ zaj.addMyPhotoPopover_{{field.uid}}($('#{{field.value.id}}'), '{{field.value.large}}', '{{field.uid}}'); })</script>
 	{% endif %}
-    <div class="clearfix"></div>
+
 </div>
 <input type="hidden" name="{{field.name}}" id="{{field.uid}}" {% if field.value %} value="{{field.value.id}}" {% endif %}>
-
+<div class="clearfix"></div>
 <br/>
 
 
@@ -111,9 +112,9 @@
 					{% endif %}
 				// Add my image
 					var imgurl = '{{baseurl}}system/plupload/preview/?id='+res.id;
-                    var el = $("<div class='col-sm-2' id='"+res.id+"' style='position: relative; cursor: pointer;'><img class='pull-left img-thumbnail img-responsive' src='"+imgurl+"'></div><div class='clearfix'></div>");
+                    var el = $("<div class='col-sm-2' id='"+res.id+"' style='position: relative; cursor: pointer;'><img class='pull-left img-thumbnail img-responsive' src='"+imgurl+"'></div>");
 					$('#{{field.uid}}-filelist').html(el);
-                    zaj.addMyPhotoPopover(el, imgurl);
+                    zaj.addMyPhotoPopover_{{field.uid}}(el, imgurl);
 				// Set as my input value
 					$('#{{field.uid}}').val(res.id);
 			};
