add customfieldentry views and controller

--- a/app/view/admin/customfield/customfield_list.html
+++ b/app/view/admin/customfield/customfield_list.html
@@ -3,7 +3,7 @@
 {% block contenttitle %}
 <div class="row">
     <div class="col-md-12">
-        <h2 class="page-title">Customfields</h2>
+        <h2 class="page-title">Custom Fields</h2>
     </div>
 </div>
 {% endblock contenttitle %}
