--- a/plugins/_jquery/view/field/categories.field.html
+++ b/plugins/_jquery/view/field/categories.field.html
@@ -39,8 +39,8 @@
 			isInput = false;
 		// Check what type of target
 			if(ev.target.type == 'button') return true;
-			if($(this).hasClass('.iCheck-helper')) {
-				console.log('asdfasdf!');
+			if($(this).hasClass('.field')) {
+				console.log('Ez itt sosem fut le!');
 				$myinput = $me;
 				isInput = true;
 			}
