--- a/plugins/_jquery/view/field/categories.field.html
+++ b/plugins/_jquery/view/field/categories.field.html
@@ -39,8 +39,7 @@
 			isInput = false;
 		// Check what type of target
 			if(ev.target.type == 'button') return true;
-			if($(this).hasClass('.field')) {
-				console.log('Ez itt sosem fut le!');
+		if($me.hasClass('field')) {
 				$myinput = $me;
 				isInput = true;
 			}
