--- a/plugins/_jquery/view/field/categories.field.html
+++ b/plugins/_jquery/view/field/categories.field.html
@@ -39,13 +39,14 @@
 			isInput = false;
 		// Check what type of target
 			if(ev.target.type == 'button') return true;
-		if($me.hasClass('field')) {
-				$myinput = $me;
-				isInput = true;
-			}
-			else {
-				$myinput = $me.find('input').first();
-			}
+		// Check if checkbox helper was clicked or simply the horizontal bar
+			if($me.hasClass('iCheck-helper')) {
+					$myinput = $me;
+					isInput = true;
+				}
+				else {
+					$myinput = $me.find('input').first();
+				}
 		// Toggle me, plus stop propagation
 			$myinput.iCheck('toggle');
 			ev.stopPropagation();
