--- a/plugins/_jquery/view/field/datetime.field.html
+++ b/plugins/_jquery/view/field/datetime.field.html
@@ -2,7 +2,22 @@
 <link rel="stylesheet" href="{{baseurl}}system/css/bootstrap/3.0/plugins/datepicker/bootstrap-datepicker.css"/>
 <script src="{{baseurl}}system/js/bootstrap/3.2/plugins/timepicker/bootstrap-timepicker.min.js?"></script>
 <link rel="stylesheet" href="{{baseurl}}system/css/bootstrap/3.2/css/bootstrap-timepicker.min.css"/>
-
+<script>
+    zaj.ready(function(){
+        {% if field.value > 0 %}
+            $('#{{field.uid}}').val(parseInt({{field.value}}));
+            var sd = new Date({{field.value}} * 1000);
+            $('#{{field.uid}}-time').timepicker('setTime', sd.getHours() + ":" + sd.getMinutes());
+            act_time['{{field.uid}}'] = sd.getHours() * 3600 + sd.getMinutes() * 60;
+            act_date['{{field.uid}}'] = Math.round(sd.getTime() / 1000) - parseInt(act_time['{{field.uid}}']);
+            setDateValue_{{field.uid}}();
+        {% else %}
+            $('#{{field.uid}}').val(0);
+            act_time['{{field.uid}}'] = act_date['{{field.uid}}'] = 0;
+            $('#{{field.uid}}-time').timepicker('setTime', "00:00");
+        {% endif %}
+    });
+</script>
 <div class="input-append bootstrap-datepicker">
     <input name="{{field.id}}[date]" class="input-small" type="text" id="{{field.uid}}-date" value="{% if field.value > 0 %}{{field.value|date:'Y-m-d'}}{% endif %}">
     <span class="add-on" onclick="jQuery('#date').datepicker('show');"><i class="icon-th"></i></span>
@@ -13,7 +28,7 @@
 </div>
 
 <input type='hidden' id='{{field.uid}}[format]' name='{{field.name}}[format]' value='Y-m-d H:i:s'>
-<input type='hidden' id='{{field.uid}}' name='{{field.name}}' value='{{field.value}}'>
+<input type='hidden' id='{{field.uid}}' name='{{field.name}}' value='{{field.value|strftime:"%s"}}'>
 <script>
     var act_date = [];
     var act_time = [];
@@ -42,20 +57,6 @@
     });
 
     function setDateValue_{{field.uid}}(){
-        $('#{{field.uid}}').val(act_date['{{field.uid}}'] + act_time['{{field.uid}}']);
+        $('#{{field.uid}}').val(parseInt(act_date['{{field.uid}}']) + parseInt(act_time['{{field.uid}}']));
     }
-
-    zaj.ready(function(){
-        {% if field.value > 0 %}
-            $('#{{field.uid}}').val({{field.value}});
-            var sd = new Date({{field.value}} * 1000);
-            $('#{{field.uid}}-time').timepicker('setTime', sd.getHours() + ":" + sd.getMinutes());
-            act_time['{{field.uid}}'] = sd.getHours() * 3600 + sd.getMinutes() * 60;
-            act_date['{{field.uid}}'] = (sd.getTime() / 1000) - act_time['{{field.uid}}'];
-        {% else %}
-            $('#{{field.uid}}').val(0);
-            act_time['{{field.uid}}'] = act_date['{{field.uid}}'] = 0;
-            $('#{{field.uid}}-time').timepicker('setTime', "00:00");
-        {% endif %}
-    });
 </script>
