--- a/plugins/_jquery/view/field/richtext.field.html
+++ b/plugins/_jquery/view/field/richtext.field.html
@@ -31,7 +31,7 @@
         <li><a class="btn" data-action="toggleHtmlView"><i class="fa fa-code"></i></a></li>
 	</ul>
     <div class='text' contenteditable="true" spellcheck="false">
-        {{field.value|strip_attribute:'style'}}
+        {{field.value|strip_attribute:'style'|safe}}
     </div>
 	<textarea class='field textarea hide' id='{{field.uid}}' name='{{field.name}}'>{{field.value|escape:'htmlall'}}</textarea>
 </div>
