--- a/plugins/_jquery/view/field/custom.field.html
+++ b/plugins/_jquery/view/field/custom.field.html
@@ -1,34 +1,40 @@
 <!-- A key/value object editor for custom fields -->
-<div id='{{field.uid}}-fields' class="row"></div>
+<div id='{{field.uid}}-fields'></div>
 <input type="hidden" name="{{field.name}}" id="{{field.uid}}">
 <a class="btn btn-mini btn-success" onclick="add_field_{{field.uid}}('','');">New</a>
 
 <script language="javascript">
 
-    function add_field_{{field.uid}}(key, val){
+    function add_field_{{field.uid}}(customfield, val){
+        var options = '';
+        {% foreach field.customfields as cf %}
+        if('{{cf.id}}' == customfield){
+            options += "<option value='{{cf.id}}' selected>{{cf.name}}</option>";
+        }
+        else{
+            options += "<option value='{{cf.id}}'>{{cf.name}}</option>";
+        }
+        {% endforeach %}
         // create field with JS
         var el = $(
-                //"<div class='alert alert-info keyvalues'>" +
-            "<div class='col-md-6'>" +
-            "<select class='field col-md-5 col-sm-5 form-control {{field.uid}}-select' id='{{field.uid}}-select' name='{{field.name}}[key][]' placeholder='key' onchange='update_field_{{field.uid}}($(this).val());'>" +
-            {% foreach field.customfields as cf %}
-            "<option value='{{cf.id}}'>{{cf.name}}</option>" +
-            {% endforeach %}
+            "<div class='alert alert-info keyvalues clearfix'>" +
+            "<div class='col-md-5'>" +
+            "<select class='field form-control {{field.uid}}-select' id='{{field.uid}}-select' name='{{field.name}}[key][]' placeholder='key' onchange='update_field_{{field.uid}}($(this).val());'>" +
+            options+
             "</select></div><div class='col-md-5'>" +
-            "<input class='field form-control text input-small {{field.uid}}-text' id='{{field.uid}}-text' type='text' name='{{field.name}}[value][]' placeholder='value' value='"+val+"'> <a class='close' href='#delete' onclick=\"remove_field_{{field.uid}}($(this))\">&times;</a></div>"
-            //"</div>"
+            "<input class='field form-control text input-small {{field.uid}}-text' id='{{field.uid}}-text' type='text' name='{{field.name}}[value][]' placeholder='value' value='"+val+"'></div><div class='col-md-2'> <a class='close' href='#delete' onclick=\"remove_field_{{field.uid}}($(this))\">&times;</a></div>"+
+            "</div>"
         );
         // append a new key-value field
         $('#{{field.uid}}-fields').append(el);
         update_field_{{field.uid}}();
     }
+
+    // create fields
     {% if field.value %}
-
         zaj.ready(function(){
-
-            {% foreach field.value as val %}
-            console.log({{forloop.counter}});
-            add_field_{{field.uid}}('',val);
+            {% foreach field.value as cf %}
+            add_field_{{field.uid}}('{{cf.data.customfield.id}}', '{{cf.data.value}}');
             {% endforeach %}
         });
     {% endif %}
