--- a/app/view/update/base-update.html
+++ b/app/view/update/base-update.html
@@ -39,17 +39,17 @@
 			<h3 class="green" style="margin-top: 10px;">Choose what to do...</h3>
 			<ul>
 				{% block menu %}
-					<li><a href='{{baseurl}}update/test/'>Run unit test</a><br/>Run and display result of all unit tests.</li>
-					<li><a href='{{baseurl}}update/template/'>Reset template cache</a><br/>Delete and regenerate files for views, lang, and conf.</li>
+					<li><a href='{{baseurl}}update/test/{% if ofw.get.update_user %}?update_user={{ofw.get.update_user|escape}}&update_password={{ofw.get.update_password|escape}}{% endif %}'>Run unit test</a><br/>Run and display result of all unit tests.</li>
+					<li><a href='{{baseurl}}update/template/{% if ofw.get.update_user %}?update_user={{ofw.get.update_user|escape}}&update_password={{ofw.get.update_password|escape}}{% endif %}'>Reset template cache</a><br/>Delete and regenerate files for views, lang, and conf.</li>
 					{% if mysql_setting_enabled %}
-					<li><a href='{{baseurl}}update/database/'>Database model update</a><br>Syncronizes models and database structure.</li>
+					<li><a href='{{baseurl}}update/database/{% if ofw.get.update_user %}?update_user={{ofw.get.update_user|escape}}&update_password={{ofw.get.update_password|escape}}{% endif %}'>Database model update</a><br>Syncronizes models and database structure.</li>
 					{% elseif %}
 					<li><span style="color: silver;">Database model disabled</span><br/>You can enable via the <em>mysql_enabled</em> setting.</li>
 					{% endif %}
-					<li><a href='{{baseurl}}update/cache/'>Reset object cache</a><br/>Delete and regenerate object cache.</li>
+					<li><a href='{{baseurl}}update/cache/{% if ofw.get.update_user %}?update_user={{ofw.get.update_user|escape}}&update_password={{ofw.get.update_password|escape}}{% endif %}'>Reset object cache</a><br/>Delete and regenerate object cache.</li>
 					<hr/>
-					<li><a href='{{baseurl}}update/deploy/'>Run deployment script</a><br/>Runs unit tests and resets template cache.</li>					
-					<li><a href='{{baseurl}}update/install/'>Install / update version</a><br/>Rerun installation and update script.</li>
+					<li><a href='{{baseurl}}update/deploy/{% if ofw.get.update_user %}?update_user={{ofw.get.update_user|escape}}&update_password={{ofw.get.update_password|escape}}{% endif %}'>Run deployment script</a><br/>Runs unit tests and resets template cache.</li>
+					<li><a href='{{baseurl}}update/install/{% if ofw.get.update_user %}?update_user={{ofw.get.update_user|escape}}&update_password={{ofw.get.update_password|escape}}{% endif %}'>Install / update version</a><br/>Rerun installation and update script.</li>
 				{% endblock menu %}
 				<hr/>
 				<li><a href='{{baseurl}}'>Go to your project's home</a></li>
