--- a/app/view/update/update-deploy.html
+++ b/app/view/update/update-deploy.html
@@ -18,12 +18,12 @@
 	{% if dbresults.num_of_changes > 0 %}
 		<div class="alert alert-danger">
 			<h5>The database needs to be updated with {{dbresults.num_of_changes}} automatic changes.</h5>
-			<a href="{{baseurl}}update/database/">Click here</a> to go to the database update panel.
+			<a href="{{baseurl}}update/database/{% if ofw.get.update_user %}?update_user={{ofw.get.update_user|escape}}&update_password={{ofw.get.update_password|escape}}{% endif %}">Click here</a> to go to the database update panel.
 		</div>
 	{% elseif %}
 		<div class="alert alert-success">
 			<h5>The database seems to be up to date. There are {{dbresults.num_of_todo}} manual changes waiting.</h5>
-			<a href="{{baseurl}}update/database/">Click here</a> to go to the database update panel.
+			<a href="{{baseurl}}update/database/{% if ofw.get.update_user %}?update_user={{ofw.get.update_user|escape}}&update_password={{ofw.get.update_password|escape}}{% endif %}">Click here</a> to go to the database update panel.
 		</div>
 	{% endif %}
 
