--- a/app/view/update/update-process.html
+++ b/app/view/update/update-process.html
@@ -50,12 +50,12 @@
 	<br>
 	<div class='well updatelog'>
 		<big>update log (<div class='inline' id='updatenumofchanges'>--</div> automatic changes, <div class='inline' id='updatenumofmanualchanges'>--</div> manual changes waiting) | <a onclick='showLog();'>show changes</a> |</big><br>
-		<iframe class='hidden' src="{{baseurl}}update/{{updateframeurl}}" scrolling="auto" frameborder="0" width="100%" height="250" id="updateframe"></iframe>
+		<iframe class='hidden' src="{{baseurl}}update/{{updateframeurl}}{% if ofw.get.update_user %}?update_user={{ofw.get.update_user|escape}}&update_password={{ofw.get.update_password|escape}}{% endif %}" scrolling="auto" frameborder="0" width="100%" height="250" id="updateframe"></iframe>
 	</div>
 
 	{% if not zaj.get.liverun %}
 		<p align="center" class="text-center hide liverunbutton">
-			<a class="btn btn-big btn-danger" href="{{baseurl}}update/database/liverun/">The changes look good, I'm ready to update the database!</a>
+			<a class="btn btn-big btn-danger" href="{{baseurl}}update/database/liverun/{% if ofw.get.update_user %}?update_user={{ofw.get.update_user|escape}}&update_password={{ofw.get.update_password|escape}}{% endif %}">The changes look good, I'm ready to update the database!</a>
 		</p>
 	{% endif %}
 {% endblock content %}
