--- a/app/view/ieupgrade/upgrade.html
+++ b/app/view/ieupgrade/upgrade.html
@@ -1,5 +1,5 @@
 <!--[if lte IE 8]>
-	{% lang 'ieupgrade' %}
+	{% lang 'ieupgrade/ieupgrade' %}
 	<aside id="ie_upgrade" class="navbar-fixed-top bg-danger" style="z-index:99999">
 		<div class="container">
 			<div class="row">
