--- a/plugins/_jquery/view/field/select.field.html
+++ b/plugins/_jquery/view/field/select.field.html
@@ -2,7 +2,7 @@
 <script src="{{baseurl}}system/js/chosen/chosen.jquery.min.js"></script>
 <link rel="stylesheet" href="{{baseurl}}system/css/chosen/chosen.css">
 <!-- Display markup -->
-<select class='ofw-field-select form-control' id='{{field.uid}}' name='{{field.name}}'>
+<select class='ofw-field-select form-control' id='{{field.uid}}' name='{{field.name}}' data-model='{{field.class_name}}'>
 	{% foreach field.options.choices as choice %}
 		<option value='{{choice}}' {% if field.value eq choice %}selected{%endif%}>{{choice}}</option>
 	{% endfor %}
