--- a/app/view/base-system.html
+++ b/app/view/base-system.html
@@ -17,15 +17,28 @@
 		{% endblock mozajikstyles %}
 		
 		{% block javascripts %}
-		<!-- javascripts -->
-		<script language="JavaScript" src="{{baseurl}}system/js/mootools/mootools-core-1.3.js" type="text/javascript"></script>
-		<script language="JavaScript" src="{{baseurl}}system/js/mootools/mootools-more-1.3.js" type="text/javascript"></script>
+			{% if zaj.plugin._mootools %}
+				<!-- mootools -->
+				<script language="JavaScript" src="{{baseurl}}system/js/mootools/mootools-core-1.3.js" type="text/javascript"></script>
+				<script language="JavaScript" src="{{baseurl}}system/js/mootools/mootools-more-1.3.js" type="text/javascript"></script>
 
-		<script language="JavaScript" src="{{baseurl}}system/js/mozajik-base-1.3.js" type="text/javascript"></script>
-		<script language="JavaScript" src="{{baseurl}}system/js/mozajik-tool-1.3.js" type="text/javascript"></script>
-		<script language="JavaScript" src="{{baseurl}}system/js/mozajik-gui-1.3.js" type="text/javascript"></script>
+				<script language="JavaScript" src="{{baseurl}}system/js/mozajik-base-1.3.js" type="text/javascript"></script>
+				<script language="JavaScript" src="{{baseurl}}system/js/mozajik-tool-1.3.js" type="text/javascript"></script>
+				<script language="JavaScript" src="{{baseurl}}system/js/mozajik-gui-1.3.js" type="text/javascript"></script>
+			{% endif %}
+			{% if zaj.plugin._jquery %}
+				<!-- jquery -->
+				<script src="{{baseurl}}system/js/jquery/jquery-1.10.min.js"></script>
+				<!-- bootstrap js -->
+				<script src="{{baseurl}}system/js/bootstrap/bootstrap.min.js?v3"></script>
+				<!-- ofw js -->
+				<script src="{{baseurl}}system/js/mozajik-base-jquery.js?{% cachebuster %}"></script>
+			{% endif %}
+
 		{% endblock javascripts %}
-				
+
+
+
 		{{ofw.js|safe}}
 
 		{% block head %}{% endblock %}
