one sized input, select

--- a/plugins/_jquery/view/field/locale.field.html
+++ b/plugins/_jquery/view/field/locale.field.html
@@ -9,6 +9,6 @@
 </select>
 <script>
     zaj.ready(function(){
-        $('#{{field.uid}}').chosen({width: '100%'});
+        $('#{{field.uid}}').chosen({width: '232px'});
     });
 </script>
