--- a/site/css/mozajik-admin.css
+++ b/site/css/mozajik-admin.css
@@ -257,13 +257,23 @@
 		font-size: 14px;
 		clear: both;
 	}
-	label input, label select{
+	label input{
 		float: right;
 		position: relative;
 		width: 220px;
 		margin-left: 10px;
 		top: -7px;
 	}
+
+	label select{
+		float: right;
+		position: relative;
+		width: 232px;
+		margin-left: 10px;
+		top: -7px;
+	}
+
+
 	label select{ top: -2px; }
 	input[type="text"], input[type="password"], input[type="email"], textarea, select{
 		margin-bottom: 0px;
