--- a/plugins/_jquery/view/field/locale.field.html
+++ b/plugins/_jquery/view/field/locale.field.html
@@ -9,6 +9,7 @@
 </select>
 <script>
     zaj.ready(function(){
+	    // 232px = input width
         $('#{{field.uid}}').chosen({width: '232px'});
     });
 </script>
