fix search-select in legacy css

--- a/plugins/_jquery/view/field/locale.field.html
+++ b/plugins/_jquery/view/field/locale.field.html
@@ -9,7 +9,6 @@
 </select>
 <script>
     zaj.ready(function(){
-	    // 232px = input width
-        $('#{{field.uid}}').chosen({width: '232px'});
+        $('#{{field.uid}}').chosen({width: '100%'});
     });
 </script>
