Photo upload button is now localized.

--- a/plugins/_jquery/view/field/photo.field.html
+++ b/plugins/_jquery/view/field/photo.field.html
@@ -16,7 +16,7 @@
 </script>
 
 
-<a id="{{field.uid}}-pickfiles" class="btn ofw-field-photo pickfiles" style="cursor: pointer;"><i class="icon-folder-open"></i> Kép kiválasztása</a>
+<a id="{{field.uid}}-pickfiles" class="btn ofw-field-photo pickfiles" style="cursor: pointer;"><i class="icon-folder-open"></i> {{#system_field_picture_upload#}}</a>
 
 <div id="{{field.uid}}-transferbar" role="progressbar" class="hidden progress progress-striped active">
   <div class="bar progress-bar" style="width: 0%;"></div>
