--- a/plugins/_jquery/view/field/photos.field.html
+++ b/plugins/_jquery/view/field/photos.field.html
@@ -45,7 +45,7 @@
 <!-- Uploader -->
 <script language="JavaScript" src="{{baseurl}}system/js/plupload/plupload.full.js" type="text/javascript"></script>
 
-<a id="{{field.uid}}-pickfiles" class="btn btn-primary"><i class="icon-folder-open"></i> Add photos</a>
+<a id="{{field.uid}}-pickfiles" class="btn btn-primary"><i class="icon-folder-open"></i> {{#system_field_picture_upload#}}</a>
 <div id="{{field.uid}}-transferbar" class="hidden progress progress-striped active"><div class="progress-bar bar" style="width: 0;"></div></div>
 <div id="{{field.id}}-uploadbutton"></div>
 <div id="{{field.id}}-errors"></div>
