--- a/plugins/_jquery/view/field/friendly.field.html
+++ b/plugins/_jquery/view/field/friendly.field.html
@@ -1,22 +1,15 @@
 <input class='ofw-field-friendly form-control' type='text' id='{{field.id}}' name='{{field.name}}' value='{{field.value|escape}}'>
 {% if not field.value %}
 <script>
-	ofw.ready(function(){
+	requirejs(["system/js/library/text"], function(text) {
 		$('[name="{{field.options.from|escape}}"]').on('change keyup', function(){
 			// Get value
-				var val = $(this).val();
+			var val = $(this).val();
 			// For selects, it's a bit more complicated - use selected item!
-				if(this.tagName.toLowerCase() == 'select') val = $(this).find('option:selected').text();
-
-			// Now convert the value
-				// @todo add logic for international character conversion here!
-				var friendlyVal = val
-					.toLowerCase()
-					.replace(/ /g, '-')
-					.replace(/[^\w-]+/g, '');
+			if(this.tagName.toLowerCase() == 'select') val = $(this).find('option:selected').text();
 
 			// Finally, set my value
-				$('[name="{{field.name|escape}}"]').val(friendlyVal);
+			$('[name="{{field.name|escape}}"]').val(text.toFriendlyUrl(val));
 		});
 	});
 </script>
