--- a/plugins/_jquery/view/field/id.field.html
+++ b/plugins/_jquery/view/field/id.field.html
@@ -1,1 +1,1 @@
-<input class='field id' type='hidden' id='{{field.id}}' name='{{field.name}}' value='{{field.value}}'>
+<input class='field id' type='hidden' id='{{field.id}}' name='{{field.name}}' value='{{field.value|escape}}'>
