--- a/plugins/_jquery/view/field/manytomany.field.html
+++ b/plugins/_jquery/view/field/manytomany.field.html
@@ -1,12 +1,7 @@
 <!-- Load up my requirements -->
 {% lang 'system/fields' 'relationships' %}
 
-<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2/css/select2.min.css" rel="stylesheet" />
-<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2/js/select2.min.js"></script>
-<!--
-<script src="{{baseurl}}system/js/chosen/chosen.jquery.min.js"></script>
-<link rel="stylesheet" href="{{baseurl}}system/css/chosen/chosen.css">
--->
+<link rel="stylesheet" href="{{baseurl}}system/css/ext/select2/select2.min.css">
 
 <!-- Additional hidden input so that empty value is sent when nothing is selected -->
 <input type="hidden" name="{{field.name}}[]">
@@ -28,7 +23,7 @@
 	{% endif %}
 </select>
 <script>
-	ofw.ready(function(){
+	requirejs(["system/js/ext/select2/select2.min"], function(select2){
 		// Show it
 		$('#{{field.uid}}').removeClass('hide');
 		$('#{{field.uid}}-loader').addClass('hide');
@@ -86,30 +81,5 @@
 			});
 
 		{% endif %}
-
-		/**
-		$('#{{field.uid}}').chosen({width: '100%', inherit_select_classes: true, no_results_text: '{{#system_field_relationships_search#|escapejs}}'});
-
-		{% if field.choices.total > 50 %}
-			// Add search relation to field
-			$('#{{field.uid}}').data('chosen').search_field.$zaj().search('system/search/relation/?class={{field.class_name}}&field={{field.name}}', function(res){
-				// Decode json
-					var rdata = JSON.parse(res);
-				// Remove all unselected
-					var $select = $('#{{field.uid}}');
-					$select.find('option:not(:selected)').remove();
-				// Add new ones
-					for(var i = 0; i < rdata.data.length; i++){
-						$select.append('<option value="'+rdata.data[i].id+'">'+rdata.data[i].name+'</option>');
-					}
-				// Update chosen
-					$select.trigger('chosen:close');
-					$select.trigger('chosen:updated');
-					$select.trigger('chosen:open');
-					$('#{{field.uid}}').data('chosen').search_field.val(rdata.query);
-					$select.data('chosen').search_field.trigger('keyup.chosen');
-			}, {pushstate_url: false, allow_empty_query: false});
-		{% endif %}
-		**/
 	});
 </script>
